--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "devDependencies": {
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^0.14.3",
-    "semantic-release": "12.2.2"
+    "husky": "^0.14.3"
   },
   "config": {
     "commitizen": {
