--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "cm": "git cz",
-    "release": "standard-version -t ''"
+    "release": "standard-version -t ''",
+    "push": "git push --follow-tags origin master"
   },
   "repository": {
     "type": "git",
