feat: add precommit to commit package lock changes

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "cm": "git cz",
+    "precommit": "npm install && git add .",
     "release": "standard-version -t ''",
     "push": "git push --follow-tags origin master"
   },
