--- a/package.json
+++ b/package.json
@@ -24,7 +24,16 @@
   "homepage": "https://github.com/jatap/test-cz-cli#readme",
   "devDependencies": {
     "commitizen": "^2.9.6",
+    "cz-customizable": "^5.2.0",
     "husky": "^0.14.3",
     "standard-version": "^4.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "config/cz-customizable/base.js"
+    }
   }
 }
