--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Test Commitizen",
   "main": "src/index.js",
   "scripts": {
-    "cm": "git cz",
-    "postrelease": "./scripts/postrelease.sh",
-    "release": "standard-version -t ''",
-    "push": "git push --follow-tags origin master"
+    "release": "standard-version -t '' --no-verify",
+    "push": "git push --follow-tags origin master",
+    "commit": "git-cz",
+    "commit:retry": "git-cz --retry",
+    "commitmsg": "commitlint -e"
   },
   "repository": {
     "type": "git",
@@ -23,17 +24,25 @@
   },
   "homepage": "https://github.com/jatap/test-cz-cli#readme",
   "devDependencies": {
+    "@commitlint/cli": "^6.0.2",
+    "@commitlint/config-conventional": "^6.0.2",
+    "@commitlint/prompt": "^6.0.2",
     "commitizen": "^2.9.6",
     "cz-customizable": "^5.2.0",
-    "husky": "^0.14.3",
+    "husky": "^0.15.0-beta.16",
     "standard-version": "^4.3.0"
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-customizable"
+      "path": "node_modules/@commitlint/prompt"
     },
     "cz-customizable": {
       "config": "config/cz-customizable/base.js"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo '*** Sample git hook ***'"
     }
   }
 }
